--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IDEs and editors
+.c9/
+.idea/
+.settings/
+.project
+.classpath
+*.launch
+*.sublime-workspace
+
 # dependencies
 /node_modules
 /.pnp
